--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,23 +11,18 @@ env:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
           go-version: 1.20
 
-      - name: Run Go build with race detector
-        run: go build -race ./...
+      - name: Build
+        run: go build -race cmd/narratorfiles/
 
-      - name: Run tests with race detector and no cache
+      - name: Test
         run: go test -race -count=1 ./...
 
   build-and-push-image:
