--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,21 +9,21 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.20
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.20
 
-      - name: Build
-        run: go build -race cmd/narratorfiles/
+    - name: Build
+      run: go build -v ./...
 
-      - name: Test
-        run: go test -race -count=1 ./...
+    - name: Test
+      run: go test -v ./...
 
   build-and-push-image:
     runs-on: ubuntu-latest
